<?xml version="1.0" encoding="utf-8"?>
<!--
 This file is part of BBCT for Android.

 Copyright 2012 codeguru <codeguru@users.sourceforge.net>

 BBCT for Android is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
 the Free Software Foundation, either version 3 of the License, or
 (at your option) any later version.

 BBCT for Android is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License for more details.

 You should have received a copy of the GNU General Public License
 along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@id/scroll_card_details"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1" >

        <TableRow>

            <CheckBox
                android:id="@id/autograph"
                android:text="@string/autograph_label"
                android:layout_span="2" />
        </TableRow>

        <TableRow>

            <TextView
                android:text="@string/condition_label"
                android:textStyle="bold" />

            <Spinner
                android:id="@id/condition"
                android:hint="@string/condition_hint"
                android:maxLines="1" />
        </TableRow>

        <TableRow>

            <TextView
                android:text="@string/brand_label"
                android:textStyle="bold" />

            <AutoCompleteTextView
                android:id="@id/brand_text"
                android:completionThreshold="1"
                android:hint="@string/brand_hint"
                android:inputType="textCapWords"
                android:selectAllOnFocus="true"
                android:maxLines="1">

                <requestFocus />
            </AutoCompleteTextView>
        </TableRow>

        <TableRow>

            <TextView
                android:text="@string/year_label"
                android:textStyle="bold" />

            <EditText
                android:id="@id/year_text"
                android:hint="@string/year_hint"
                android:inputType="number"
                android:selectAllOnFocus="true"
                android:maxLines="1" />
        </TableRow>

        <TableRow>

            <TextView
                android:text="@string/number_label"
                android:textStyle="bold" />

            <EditText
                android:id="@id/number_text"
                android:hint="@string/number_hint"
                android:inputType="text"
                android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789 "
                android:selectAllOnFocus="true"
                android:maxLines="1" />
        </TableRow>

        <TableRow>

            <TextView
                android:text="@string/value_label"
                android:textStyle="bold" />

            <EditText
                android:id="@id/value_text"
                android:hint="@string/value_hint"
                android:inputType="numberDecimal"
                android:selectAllOnFocus="true"
                android:maxLines="1" />
        </TableRow>

        <TableRow>

            <TextView
                android:text="@string/count_label"
                android:textStyle="bold" />

            <EditText
                android:id="@id/count_text"
                android:hint="@string/count_hint"
                android:inputType="number"
                android:selectAllOnFocus="true"
                android:maxLines="1" />
        </TableRow>

        <TableRow>

            <TextView
                android:text="@string/player_name_label"
                android:textStyle="bold" />

            <AutoCompleteTextView
                android:id="@id/player_name_text"
                android:completionThreshold="1"
                android:hint="@string/player_name_hint"
                android:inputType="textCapWords"
                android:selectAllOnFocus="true"
                android:maxLines="1" />
        </TableRow>

        <TableRow>

            <TextView
                android:text="@string/team_label"
                android:textStyle="bold" />

            <AutoCompleteTextView
                android:id="@id/team_text"
                android:completionThreshold="1"
                android:hint="@string/team_hint"
                android:inputType="textCapWords"
                android:selectAllOnFocus="true"
                android:maxLines="1" />
        </TableRow>

        <TableRow>

            <TextView
                android:text="@string/player_position_label"
                android:textStyle="bold" />

            <Spinner
                android:id="@id/player_position_text"
                android:hint="@string/player_position_hint"
                android:maxLines="1" />
        </TableRow>

    </TableLayout>

</ScrollView>
