<?xml version="1.0" encoding="utf-8"?>
<!--
 This file is part of BBCT for Android.

 Copyright 2012-14 codeguru <codeguru@users.sourceforge.net>

 BBCT for Android is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
 the Free Software Foundation, either version 3 of the License, or
 (at your option) any later version.

 BBCT for Android is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License for more details.

 You should have received a copy of the GNU General Public License
 along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <bbct.android.common.view.FilterOptionView
            android:id="@id/brand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:orientation="horizontal"
            android:singleLine="true"
            app:hint="@string/brand_hint"
            app:label="@string/brand"
            app:labelTextSize="@dimen/option_size"
            app:labelWeight="@integer/filterLabelWeight"
            app:editWeight="@integer/filterEditWeight"/>

        <bbct.android.common.view.FilterOptionView
            android:id="@id/year"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:orientation="horizontal"
            android:singleLine="true"
            app:hint="@string/year_hint"
            app:label="@string/year"
            app:labelTextSize="@dimen/option_size"
            app:labelWeight="@integer/filterLabelWeight"
            app:editWeight="@integer/filterEditWeight"/>

        <bbct.android.common.view.FilterOptionView
            android:id="@id/number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:orientation="horizontal"
            android:singleLine="true"
            app:hint="@string/number_hint"
            app:label="@string/number"
            app:labelTextSize="@dimen/option_size"
            app:labelWeight="@integer/filterLabelWeight"
            app:editWeight="@integer/filterEditWeight"/>

        <bbct.android.common.view.FilterOptionView
            android:id="@id/player_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:orientation="horizontal"
            android:singleLine="true"
            app:hint="@string/player_name_hint"
            app:label="@string/player_name"
            app:labelTextSize="@dimen/option_size"
            app:labelWeight="@integer/filterLabelWeight"
            app:editWeight="@integer/filterEditWeight"/>

        <bbct.android.common.view.FilterOptionView
            android:id="@id/team"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:orientation="horizontal"
            android:singleLine="true"
            app:hint="@string/team_hint"
            app:label="@string/team"
            app:labelTextSize="@dimen/option_size"
            app:labelWeight="@integer/filterLabelWeight"
            app:editWeight="@integer/filterEditWeight"/>

    </LinearLayout>

</ScrollView>
