<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/card_list">

    <fragment
        android:id="@+id/card_list"
        android:name="bbct.android.common.fragment.BaseballCardList"
        android:label="@string/app_name"
        tools:layout="@layout/card_list">
        <action
            android:id="@+id/action_details"
            app:destination="@id/card_details" />
        <action
            android:id="@+id/action_filter"
            app:destination="@id/filter_cards" />
        <argument
            android:name="filterParams"
            app:argType="android.os.Bundle"
            app:nullable="true" />
    </fragment>
    <fragment
        android:id="@+id/about"
        android:name="bbct.android.common.fragment.About"
        android:label="@string/about_title"
        tools:layout="@layout/about" />
    <fragment
        android:id="@+id/card_details"
        android:name="bbct.android.common.fragment.BaseballCardDetails"
        android:label="@string/card_details_title"
        tools:layout="@layout/card_details">
        <argument
            android:name="id"
            app:argType="long" />
    </fragment>
    <fragment
        android:id="@+id/filter_cards"
        android:name="bbct.android.common.fragment.FilterCards"
        android:label="@string/filter_cards_title"
        tools:layout="@layout/filter_cards">
        <action
            android:id="@+id/action_list"
            app:destination="@id/card_list" />
    </fragment>
    <action
        android:id="@+id/action_about"
        app:destination="@id/about" />
</navigation>
